Bug 136369 - Very large Shape with pattern/hatch file doesn't opens very very slowly with Skia Vulkan
Summary: Very large Shape with pattern/hatch file doesn't opens very very slowly with ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-09-01 13:08 UTC by Telesto
Modified: 2020-09-07 13:23 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file (239.42 KB, application/vnd.oasis.opendocument.graphics)
2020-09-01 13:09 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-09-01 13:08:56 UTC
Description:
Very large Shape with pattern/hatch file doesn't opens very very slowly with Skia Vulkan

Steps to Reproduce:
1. Open the attached file with Vulkan

Actual Results:
Wait Rounding

Expected Results:
Expect it to be faster compared to Raster


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 1e0cfd5662d95cea84e80e4fe10d52c3b1101ae6
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Vulkan; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-09-01 13:09:10 UTC
Created attachment 164966 [details]
Example file
Comment 2 Commit Notification 2020-09-07 13:23:13 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/acb47f7aaaec14baccc0f3233670044e72342d29

do not queue up too many Skia image drawing operations (tdf#136369)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.